# P2P-LENDING

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.database.yml  docker-compose.yml
CreditScoring/: .dockerignore  .gitignore  API_DOCS.md  Dockerfile  app.py  docker-compose.yml  requirements.txt
CreditScoring/src/: __init__.py  eda_utils.py  (+2 more)
admin-web/: Dockerfile  package-lock.json  package.json
client/: App.js  package-lock.json  package.json
ekyc_service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  blueprint.py  container.py  docker-compose.yml  eKYC_Service_Testing.postman_collection.json  gunicorn_config.py  pyproject.toml  requirements_onnx.txt  wsgi.py
ekyc_service/ekyc/common/: distance.py  functions.py
ekyc_service/ekyc/controller/: common_controller.py  ekyc_controller.py
ekyc_service/ekyc/models/: VGGFace2.py
ekyc_service/ekyc/models/weights/: vggface2.onnx
ekyc_service/ekyc/service/: common_service.py  ekyc_service.py  minifasnet.py
ekyc_service/ekyc/service/face_check_service/: face_matching_service.py  face_orientation.py
ekyc_service/ekyc/utils/: utils.py
ekyc_service/tests/: model_test.py  ocr.py
ekyc_service/tools/: benchmark_accuracy.py  onnx_converter.py
explorer-web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
getWallet/: README.md  check-blockchain.js  enroll-admin.js  huongdan.md  package-lock.json  package.json
server/: .gitignore  API_DOCS.MD  README.md  creditscoring.md  jest.config.js  nodemon.json  package-lock.json  package.json  test.js
(+234 files in other folders)
